--- a/src/data/levels/05c_APU/08_Pulse Channels 3-5 - Length counter/chat/en.yml
+++ b/src/data/levels/05c_APU/08_Pulse Channels 3-5 - Length counter/chat/en.yml
@@ -67,7 +67,7 @@ exercise:
   - |-
     📚  in 🟦  `PulseChannel`:
     **->** import that class and add a `lengthCounter` property with a new instance
-    **->** modify **sample()**, so if ```javascript !this.isEnabled()``` or the length counter is not active, it returns the last generated sample, without changing anything
+    **->** modify **sample()** so if ```javascript !this.isEnabled()``` or the length counter is not active, it returns the last generated sample, without changing anything
     **->** add the following methods:
     **quarterFrame()**:
       **[!]** leave empty for now
@@ -88,7 +88,7 @@ exercise:
     **onWrite(value)**:
       **->** __keep existing behavior__
       **->** determines the new length by accessing the `noteLengths` array with the ```javascript this.lengthCounterLoad``` index
-        use 📄  ~/lib/apu/noteLengths.js~ to get the array
+        (use 📄  ~/lib/apu/noteLengths.js~ to get the array)
       **->** assigns the new length to the `counter` property of the channel's length counter
   - |-
     📚  implement in 🎛️  `APUControl`:
