--- a/src/data/levels/05c_APU/05_Pulse Channels 1-5 - Channel setup/chat/en.yml
+++ b/src/data/levels/05c_APU/05_Pulse Channels 1-5 - Channel setup/chat/en.yml
@@ -47,7 +47,7 @@ connect:
   - |-
     📚  implement in 🕛  `PulseTimerHighLCL`:
     **onLoad()**:
-      **->** uses ```javascript this.addField(...)``` to set a 3-bit `timerHigh` field from bit 0
+      **->** uses ```javascript this.addField(...)``` to define a 3-bit `timerHigh` field from bit 0
     **onWrite(value)**:
       **->** sets the value with ```javascript this.setValue(...)```
       **->** calls ```javascript updateTimer()``` on the Pulse Channel instance
