Adding spanish localization

--- a/src/data/levels/05c_APU/13_Triangle Channel 3-3 - Linear length counter/chat/en.yml
+++ b/src/data/levels/05c_APU/13_Triangle Channel 3-3 - Linear length counter/chat/en.yml
@@ -18,9 +18,9 @@ main:
 exercise:
   messages:
   - |- 
-    📚  create a 📏  `LinearLengthCounter` class <that extends from `LengthCounter`> with the following:
+    📚  create a 📏  `LinearLengthCounter` class that <extends> from `LengthCounter` with the following:
     **constructor()**:
-      **->** calls ```super()```
+      **->** calls ```javascript super()```
       **->** sets ```javascript this.reload = 0```
       **->** sets ```javascript this.reloadFlag = false```
     **fullReset()**:
