--- a/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-zero hit/chat/es.yml
+++ b/src/data/levels/05b_PPU/18_Sprites 6-6 - Sprite-zero hit/chat/es.yml
@@ -2,7 +2,7 @@ main:
   messages:
   - el hardware tiene un mecanismo para detectar colisiones entre el primer sprite en OAM (sprite cero) y el fondo
   - se llama sprite-zero hit, y se activa cuando un píxel opaco del sprite cero se superpone a un píxel opaco del fondo
-  - cuando eso ocurre, la PPU establece la bandera de sprite-zero hit en 📊  `PPUStatus` y los juegos pueden leerla
+  - cuando eso ocurre, la PPU enciende la bandera de sprite-zero hit en 📊  `PPUStatus` y los juegos pueden leerla
   responses:
   - ¿para qué se utiliza? [usage]
 
