Finishing Noise Channel script

--- a/src/data/levels/05c_APU/12_Triangle Channel 2-3 - Regular length counter/chat/en.yml
+++ b/src/data/levels/05c_APU/12_Triangle Channel 2-3 - Regular length counter/chat/en.yml
@@ -61,5 +61,5 @@ exercise:
     **onWrite(value)**:
       **->** __keep existing behavior__
       **->** if `!this.enableTriangle`:
-        **->** resets the channels' length counter
+        **->** resets the channel's length counter
   responses: []
