Adding spanish localization

--- a/src/data/levels/05c_APU/14_Noise Channel 1-3 - Length counter/chat/en.yml
+++ b/src/data/levels/05c_APU/14_Noise Channel 1-3 - Length counter/chat/en.yml
@@ -52,6 +52,6 @@ exercise:
 random:
   messages:
   - well, obviously that's not what the NEEES does
-  - but I added it just to hear something!
+  - but I added it just so you can hear something!
   - we'll properly emulate the noise in the next level
   responses: []
