Finishing linear feedback shift register script

--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/es.yml
@@ -16,7 +16,7 @@ finally:
   - 📚  su constructor debe recibir y asignar una propiedad `ppu` con la instancia de PPU
   - |-
     📚  haz estos cambios en la clase 🖥️  `PPU`:
-    **constructor**:
+    **constructor(cpu)**:
       **->** instancia el renderizador de fondos:
         ```javascript this.backgroundRenderer = new BackgroundRenderer(this)```
         (¡recuerda importarlo si lo definiste en otro archivo!)
