--- a/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/en.yml
+++ b/src/data/levels/05b_PPU/09_Backgrounds 1-2 - Drawing Name tables/chat/en.yml
@@ -16,7 +16,7 @@ finally:
   - 📚  its constructor should receive and assign a `ppu` property with the PPU instance
   - |-
     📚  make these changes to the 🖥️  `PPU` class:
-    **constructor**:
+    **constructor(cpu)**:
       **->** instantiates the background renderer:
         ```javascript this.backgroundRenderer = new BackgroundRenderer(this)```
         (remember to import it if you defined it in another file!)
