--- a/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/en.yml
+++ b/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/en.yml
@@ -22,7 +22,7 @@ implement:
   - 📚  its constructor should receive and assign a `ppu` property with the PPU instance
   - |-
     📚  make this change to the 🖥️  `PPU` class:
-    **constructor**:
+    **constructor(cpu)**:
       **->** instantiates the sprite renderer:
         ```javascript this.spriteRenderer = new SpriteRenderer(this)```
         (remember to import it if you defined it in another file!)
