--- a/src/data/levels/05c_APU/15_Noise Channel 2-3 - Linear-feedback shift register/chat/es.yml
+++ b/src/data/levels/05c_APU/15_Noise Channel 2-3 - Linear-feedback shift register/chat/es.yml
@@ -35,7 +35,7 @@ exercise:
       **sample(value)**:
         **->** haz que el <return temprano> también revise ```javascript !(this.shift & 1)```
           (el sample de salida es 0 si el primer bit del <registro de desplazamiento> es 0)
-        **->** __mantén el comportamiento existente__
+        **->** cambia el <valor de retorno principal> de ```javascript Math.floor(...)``` a solo `volume`
       **step()**:
         **->** incrementa el <contador del divisor>
         **->** si el <contador del divisor> alcanza ```javascript noisePeriods[this.registers.form.periodId]```:
