Adding spanish localization

--- a/src/data/levels/05c_APU/17_DMC Channel 1-2 - Direct load/chat/en.yml
+++ b/src/data/levels/05c_APU/17_DMC Channel 1-2 - Direct load/chat/en.yml
@@ -1,8 +1,8 @@
 ---
 main:
   messages:
-  - the 📦  DMC Channel gives games the ability to output their own samples!
-  - this allows creating any waveforms, not just pulse waves, triangle waves, or noise!
+  - the 📦  DMC Channel gives games the ability to output their own samples
+  - this allows creating any waveforms; not just pulse waves, triangle waves, or noise!
   - "it has two modes of operation:"
   - "🎚️  <Direct Load>: games load a 7-bit sample directly to the APU (high quality, but CPU intensive)"
   - "🤏  <Delta Modulation>: the APU automatically decodes a DPCM stream using the Delta Modulation technique, where each sample is stored as the difference (<delta>) from the previous one (low quality, but lighter)"
@@ -11,7 +11,7 @@ main:
 
 exercise:
   messages:
-  - yeah, for us, it's more simpler to implement
+  - yeah, for us, it's simpler to implement
   - 📚  create a `DMCChannel` class, using 📄  ~/tmpl/apu/DMCChannel.js~ as a template
   - |-
     📚  in 🔊  `APU`:
