--- a/src/data/levels/05c_APU/17_DMC Channel 1-2 - Direct load/chat/es.yml
+++ b/src/data/levels/05c_APU/17_DMC Channel 1-2 - Direct load/chat/es.yml
@@ -1,9 +1,31 @@
----
 main:
   messages:
-  - the 📦  DMC Channel gives games the ability to output their own samples!
-  - this allows creating any waveforms, not just pulse waves, triangle waves, or noise!
-  - "it has two modes of operation:"
-  - "🎚️  <Direct Load>: games load a 7-bit sample directly to the APU (high quality, but CPU intensive)"
-  - "🔼  <Delta Modulation>: the APU automatically decodes a DPCM stream using the _Delta Modulation_ technique, where each sample is stored as the difference (<delta>) from the previous one (low quality, but lighter)"
+  - el 📦  Canal DMC les da a los juegos la capacidad de reproducir sus propios samples
+  - ¡esto permite crear cualquier forma de onda; ¡no solo ondas cuadradas, ondas triangulares o ruido!
+  - "tiene dos modos de operación:"
+  - "🎚️  <Carga Directa>: los juegos cargan un sample de 7 bits directamente a la APU (alta calidad, pero consume mucha CPU)"
+  - "🤏  <Modulación Delta>: la APU decodifica automáticamente un stream DPCM usando la técnica de Modulación Delta, donde cada sample se almacena como la diferencia (<delta>) con respecto a la anterior (baja calidad, pero más liviano)"
+  responses:
+  - carga directa suena más fácil [exercise]
+
+exercise:
+  messages:
+  - sí, para nosotros es más simple de implementar
+  - 📚  crea una clase `DMCChannel`, usando 📄  ~/tmpl/apu/DMCChannel.js~ como plantilla
+  - |-
+    📚  en 🔊  `APU`:
+    **->** importa el canal y agrega una clave `dmc` a ```javascript this.channels``` con una nueva instancia
+    **->** en `step()`, antes de incrementar el contador de samples, llama a ```javascript this.channels.dmc.step()```
+    **->** también en `step()`, agrega el canal DMC a la mezcla:
+      ```javascript const dmc = this.channels.dmc.sample();
+      this.sample = (pulse1 + pulse2 + triangle + noise + dmc) * 0.01;
+
+      onSample(this.sample, pulse1, pulse2, triangle, noise, dmc);```
+  - |-
+      📚  implementa en 📥  `DMCLoad`:
+      **onLoad()**:
+        **->** usa ```javascript this.addField(...)``` para definir un campo `directLoad` de 7 bits desde el bit 0
+      **onWrite(value)**:
+        **->** asigna el valor con ```javascript this.setValue(...)```
+        **->** asigna el <output sample> del canal a ```javascript this.directLoad```
   responses: []
